--- a/callout.html
+++ b/callout.html
@@ -10,7 +10,7 @@
             padding: 0;
             width: 100%;
             height: 100%;
-            background-color: #1C2A3A;
+            background-color: transparent;
             color: #FFFFFF;
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
             display: flex;
@@ -25,8 +25,7 @@
             padding: 20px;
             border-radius: 8px;
             border: 1px solid #334155;
-            width: 90%;
-            max-width: 600px;
+            width: 100%;
             box-sizing: border-box;
         }
         .icon {
@@ -36,6 +35,13 @@
         .icon svg {
             width: 32px;
             height: 32px;
+        }
+        .content-wrapper {
+            flex-grow: 1;
+            display: flex;
+            align-items: center;
+            flex-wrap: wrap;
+            justify-content: space-between;
         }
         .content {
             flex-grow: 1;
@@ -51,13 +57,25 @@
         }
         .cta-button {
             display: inline-block;
-            margin-top: 15px;
             padding: 10px 15px;
             background-color: #FFC928;
             color: #000000;
             text-decoration: none;
             border-radius: 5px;
             font-weight: bold;
+            margin-left: 20px;
+            white-space: nowrap;
+        }
+        
+        @media (max-width: 480px) {
+            .content-wrapper {
+                flex-direction: column;
+                align-items: flex-start;
+            }
+            .cta-button {
+                margin-left: 0;
+                margin-top: 15px;
+            }
         }
     </style>
 </head>
@@ -67,9 +85,11 @@
         <div class="icon" id="icon-container">
             <!-- Icon will be inserted here -->
         </div>
-        <div class="content">
-            <div class="title" id="title-container"></div>
-            <div class="subtitle" id="subtitle-container"></div>
+        <div class="content-wrapper">
+            <div class="content">
+                <div class="title" id="title-container"></div>
+                <div class="subtitle" id="subtitle-container"></div>
+            </div>
             <div id="cta-container"></div>
         </div>
     </div>
@@ -77,14 +97,14 @@
     <script>
         const ICONS = {
             warning: `<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="#F9B52A" class="size-6">
-  <path stroke-linecap="round" stroke-linejoin="round" d="M12 9v3.75m-9.303 3.376c-.866 1.5.217 3.374 1.948 3.374h14.71c1.73 0 2.813-1.874 1.948-3.374L13.949 3.378c-.866-1.5-3.032-1.5-3.898 0L2.697 16.126ZM12 15.75h.007v.008H12v-.008Z" />
-</svg>`,
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M12 9v3.75m-9.303 3.376c-.866 1.5.217 3.374 1.948 3.374h14.71c1.73 0 2.813-1.874 1.948-3.374L13.949 3.378c-.866-1.5-3.032-1.5-3.898 0L2.697 16.126ZM12 15.75h.007v.008H12v-.008Z" />
+                      </svg>`,
             insight: `<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="#509EE3" class="size-6">
-  <path stroke-linecap="round" stroke-linejoin="round" d="M12 18v-5.25m0 0a6.01 6.01 0 0 0 1.5-.189m-1.5.189a6.01 6.01 0 0 1-1.5-.189m3.75 7.478a12.06 12.06 0 0 1-4.5 0m3.75 2.383a14.406 14.406 0 0 1-3 0M14.25 18v-.192c0-.983.658-1.823 1.508-2.316a7.5 7.5 0 1 0-7.517 0c.85.493 1.509 1.333 1.509 2.316V18" />
-</svg>`,
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M12 18v-5.25m0 0a6.01 6.01 0 0 0 1.5-.189m-1.5.189a6.01 6.01 0 0 1-1.5-.189m3.75 7.478a12.06 12.06 0 0 1-4.5 0m3.75 2.383a14.406 14.406 0 0 1-3 0M14.25 18v-.192c0-.983.658-1.823 1.508-2.316a7.5 7.5 0 1 0-7.517 0c.85.493 1.509 1.333 1.509 2.316V18" />
+                      </svg>`,
             info: `<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="#509EE3" class="size-6">
-  <path stroke-linecap="round" stroke-linejoin="round" d="m11.25 11.25.041-.02a.75.75 0 0 1 1.063.852l-.708 2.836a.75.75 0 0 0 1.063.853l.041-.021M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Zm-9-3.75h.008v.008H12V8.25Z" />
-</svg>`
+                     <path stroke-linecap="round" stroke-linejoin="round" d="m11.25 11.25.041-.02a.75.75 0 0 1 1.063.852l-.708 2.836a.75.75 0 0 0 1.063.853l.041-.021M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Zm-9-3.75h.008v.008H12V8.25Z" />
+                   </svg>`
         };
 
         const params = new URLSearchParams(window.location.search);
